@@ -93,6 +93,7 @@
         --with-libelf \
         --with-selinux \
         --with-python \
+        --with-pythonembed=/usr/lib:/usr/include/python \
         --with-perl \
         --with-perlembed=/usr/lib/perl5/5.10.0/i386-linux-thread-multi/CORE \
         --with-build-extlibdep \
