@@ -1,5 +1,6 @@
 
 5.2a3 -> 5.2a4:
+    - jbj: python: add --with-pythonembed for embedding python.
     - jbj: perl: wire-up %post -p <perl>. arg1/arg2, persistent interp, todo++.
     - jbj: perl: wire-up %{perl:...} with a string result.
     - jbj: perl: add --with-perlembed for embedding perl.
